support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_missing_file.i
%module test

%include "missing_filename.i"
